--- a/Styles.css
+++ b/Styles.css
@@ -1,5 +1,7 @@
 /* Base Styles */
 body {
+
+  
   font-family: 'Segoe UI', sans-serif;
   margin: 0;
   padding: 0;
@@ -9,6 +11,21 @@ body {
 }
 
 /* Header */
+
+.profile-photo {
+  text-align: center;
+  margin-top: -40px;
+}
+
+.profile-photo img {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  border: 4px solid #ffd54f;
+  object-fit: cover;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+}
+
 header {
   background-color: #fcc501c6;
   color: #010940;
@@ -70,6 +87,21 @@ h2 {
   border-radius: 10px;
   box-shadow: 0 2px 5px rgba(133, 17, 191, 0.4);
 }
+
+.profile-photo {
+  text-align: center;
+  margin-top: -40px;
+}
+
+.profile-photo img {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  border: 4px solid #ffd54f;
+  object-fit: cover;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+}
+
 
 /* Profile Links Section */
 .profile-links {
@@ -153,4 +185,6 @@ footer {
   section {
     max-width: 1024px;
   }
+
+  
 }
